todo:fix vein feature todo: fix gui